Java changed to ver 1.8