@@ -6,6 +6,7 @@ import com.kodilla.ebooklibrary.domain.UpdateRentDto;
 import org.springframework.web.bind.annotation.*;
 
 import java.time.LocalDate;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
 
@@ -16,10 +17,11 @@ class RentsController {
 
   @GetMapping(path = "/")
   public List<RentDto> getRents(@RequestParam int userId, @RequestParam int itemId) {
-    return List.of(
-      new RentDto(1, "Jan Kowalski", LocalDate.now(), LocalDate.now().plusDays(5)),
-      new RentDto(2, "Tomasz Nowak", LocalDate.now().minusDays(2), LocalDate.now().plusDays(3))
-    );
+    RentDto[] rents = {
+        new RentDto(1, "Jan Kowalski", LocalDate.now(), LocalDate.now().plusDays(5)),
+        new RentDto(2, "Tomasz Nowak", LocalDate.now().minusDays(2), LocalDate.now().plusDays(3))
+    };
+    return Arrays.asList(rents);
   }
 
   @PostMapping(path = "/")
